--- a/css/theme-elements.css
+++ b/css/theme-elements.css
@@ -11547,11 +11547,15 @@ html.boxed .slider-container {
 }
 
 .social-icons li:hover.social-icons-instagram a {
-	background: #a832c5;
+	background: #F99546;
 }
 
 .social-icons li:hover.social-icons-yelp a {
 	background: #b42a2a;
+}
+
+.social-icons li:hover.social-icons-uber a {
+	background: #06C167;
 }
 
 .social-icons li:hover.social-icons-skype a {
