Added author to footer

--- a/css/theme.css
+++ b/css/theme.css
@@ -6258,7 +6258,7 @@ html.dark .text-muted {
 }
 
 #footer a:not(.btn) {
-	color: #777;
+	color: #8AC447;
 	-webkit-transition: all 0.1s ease-in-out;
 	transition: all 0.1s ease-in-out;
 }
