--- a/css/theme-elements.css
+++ b/css/theme-elements.css
@@ -11551,7 +11551,7 @@ html.boxed .slider-container {
 }
 
 .social-icons li:hover.social-icons-yelp a {
-	background: #b42a2a;
+	background: #D32323;
 }
 
 .social-icons li:hover.social-icons-uber a {
